--- a/beefpedia_react_recreaction/example1/src/App.css
+++ b/beefpedia_react_recreaction/example1/src/App.css
@@ -62,7 +62,7 @@
   /* background-color:aqua; */
 }
 
-#smallDivContainer {
+.smallDivContainer {
   margin-top:5vh;
 
   width:100%;
@@ -70,11 +70,11 @@
   /* background-color:wheat;
   opacity: 0.2; */
   z-index:2;
-
-
 }
 
-#largeInfoContainer{
+
+
+.largeInfoContainer{
   margin-top:5vh;
 
   width:45%;
@@ -140,7 +140,6 @@ span {
   font-size:3rem;
   text-decoration: line-through;
  
- 
 }
 
 .glow {
@@ -160,4 +159,10 @@ span {
   to {
     text-shadow: 0 0 10px #fff, 0 0 15px #d1baa5, 0 0 20px#d1baa5, 0 0 25px#d1baa5, 0 0 30px#d1baa5, 0 0 35px#d1baa5, 0 0 40px#d1baa5;
   }
+}
+
+
+
+.smallShow{
+  fill:#d1baa5;
 }
