--- a/beefpedia_react_recreaction/example1/src/Components/Division/Division.css
+++ b/beefpedia_react_recreaction/example1/src/Components/Division/Division.css
@@ -4,7 +4,7 @@
     /* border: 2px solid #ab3f3f;
     border-radius: 5px; */
     margin-bottom: 1vh;
-
+    position:relative; 
 }
 
 
@@ -30,16 +30,16 @@ h5{
 
 .borderR{
 
-    transition: ease-in-out 0.2s;
-    border: 2px solid #ab3f3f;
+    transition: ease-in-out 0.3s;
+    border: 4px solid #ab3f3f;
     border-radius: 5px;
    
 }
 
 .borderW{
 
-    transition: ease-in-out 0.2s;
-    border: 2px solid #d1baa5;
+    transition: ease-in-out 0.3s;
+    border: 4px solid #d1baa5;
     border-radius: 5px;
    
 }
