semester final push

--- a/beefpedia_react_recreaction/example1/src/Components/Header/Header.css
+++ b/beefpedia_react_recreaction/example1/src/Components/Header/Header.css
@@ -43,7 +43,7 @@
 .smallDiv h2{
     font-family: 'Montserrat', sans-serif;
     color:#d1baa5 ;
-    font-size:1rem !important;
+    font-size:1rem ;
     font-weight:600;
     text-align: center;
     margin-top:2vh;
@@ -54,8 +54,36 @@
 h3{
     font-family: 'Montserrat', sans-serif;
     color:#ab3f3f ;
-    font-size:0.79rem !important;
+    font-size:0.79rem;
     font-weight:600;
     text-align: center;
     line-height: 150%;
+}
+
+
+@media all and (max-width: 699px) {
+
+
+    .smallDiv {
+        width:calc(100%/6.5);
+        height:60%;
+        border: 2px solid #ab3f3f;
+        border-radius: 5px;
+        float: left;
+        overflow-wrap: break-word;
+        display:table;
+        align-content: center;
+    }
+
+
+    .smallDiv h2{
+        font-family: 'Montserrat', sans-serif;
+        color:#d1baa5 ;
+        font-size:0.4rem ;
+        font-weight:600;
+        text-align: center;
+        line-height: 150%;
+    }
+
+    
 }
