--- a/beefpedia_react_recreaction/example1/src/Components/Division/Division.css
+++ b/beefpedia_react_recreaction/example1/src/Components/Division/Division.css
@@ -1,11 +1,9 @@
-.largeDiv {
+/* .largeDiv {
     width: 98%;
     height:auto;
-    /* border: 2px solid #ab3f3f;
-    border-radius: 5px; */
     margin-bottom: 1vh;
     position:relative; 
-}
+} */
 
 
 h4{
@@ -21,12 +19,13 @@ h4{
 h6{
     font-family: 'Montserrat', sans-serif;
     color:#d1baa5;
-    font-size:1rem !important;
+    font-size:1rem;
     font-weight:600;
     text-align:left;
     line-height: 150%;
     margin-left:10px;
     cursor: pointer;
+    text-decoration: underline;
 }
 
 h5{
@@ -53,4 +52,12 @@ h5{
     border: 4px solid #d1baa5;
     border-radius: 5px;
    
+}
+
+
+@media all and (max-width: 699px) {
+
+ 
+
+
 }
